--- a/core/vercel.json
+++ b/core/vercel.json
@@ -2,7 +2,7 @@
     "trailingSlash": false,
     "rewrites": [
         {
-            "source": "/core/api(.*)",
+            "source": "/api(.*)",
             "destination": "api/index.go"
         }
     ]
